@@ -1,107 +1,87 @@
 package com.modoensayo.classes.service;
 
 import com.modoensayo.classes.domain.Class;
-import com.modoensayo.classes.domain.ClassStatusHistory;
 import com.modoensayo.classes.dto.ClassRequest;
 import com.modoensayo.classes.dto.ClassResponse;
 import com.modoensayo.classes.enums.ClassStatus;
+import com.modoensayo.classes.enums.Disciplina;
+import com.modoensayo.classes.enums.NivelClase;
 import com.modoensayo.classes.repository.ClassRepository;
-import com.modoensayo.classes.repository.ClassStatusHistoryRepository;
-import com.modoensayo.shared.exceptions.BusinessException;
 import com.modoensayo.shared.exceptions.ResourceNotFoundException;
 import com.modoensayo.venues.domain.Room;
 import com.modoensayo.venues.repository.RoomRepository;
+import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.time.Instant;
 import java.util.List;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 @Service
+@RequiredArgsConstructor
 public class ClassService {
 
     private final ClassRepository classRepository;
-    private final ClassStatusHistoryRepository statusHistoryRepository;
     private final RoomRepository roomRepository;
 
-    public ClassService(ClassRepository classRepository,
-                        ClassStatusHistoryRepository statusHistoryRepository,
-                        RoomRepository roomRepository) {
-        this.classRepository = classRepository;
-        this.statusHistoryRepository = statusHistoryRepository;
-        this.roomRepository = roomRepository;
-    }
-
-    @Transactional(readOnly = true)
     public List<ClassResponse> listPublished() {
-        return classRepository.findByStatusAndStartTimeAfter(
-                        ClassStatus.PUBLISHED, Instant.now()).stream()
-                .map(this::toResponse)
-                .toList();
+        return classRepository.findByStatusOrderByStartTimeAsc(ClassStatus.PUBLISHED).stream()
+                .map(this::toResponse).collect(Collectors.toList());
     }
 
     @Transactional
-    public ClassResponse create(String teacherId, ClassRequest request) {
-        Room room = roomRepository.findById(UUID.fromString(request.roomId()))
+    public ClassResponse create(ClassRequest req) {
+        Room room = roomRepository.findById(req.roomId())
                 .orElseThrow(() -> new ResourceNotFoundException("Room not found"));
 
-        Class classEntity = Class.builder()
+        Class c = Class.builder()
+                .title(req.title())
+                .discipline(req.discipline() != null ? Disciplina.valueOf(req.discipline()) : Disciplina.OTRO)
+                .level(req.level() != null ? NivelClase.valueOf(req.level()) : NivelClase.BASICO)
+                .description(req.description())
+                .capacity(req.capacity())
+                .duration(req.duration())
+                .price(req.price())
+                .minAge(req.minAge() != null ? req.minAge() : 0)
+                .maxAge(req.maxAge() != null ? req.maxAge() : 99)
+                .startTime(req.startTime())
                 .room(room)
-                .teacherId(UUID.fromString(teacherId))
-                .title(request.title())
-                .discipline(request.discipline())
-                .capacity(request.capacity())
-                .price(request.price())
-                .startTime(request.startTime())
-                .endTime(request.endTime())
                 .status(ClassStatus.PUBLISHED)
                 .build();
 
-        classRepository.save(classEntity);
-        return toResponse(classEntity);
+        return toResponse(classRepository.save(c));
+    }
+
+    public List<ClassResponse> getTeacherClasses(UUID teacherId) {
+        return classRepository.findByTeacherId(teacherId).stream()
+                .map(this::toResponse).collect(Collectors.toList());
+    }
+
+    public List<ClassResponse> getByVenue(UUID venueId) {
+        return classRepository.findByRoomVenueId(venueId).stream()
+                .map(this::toResponse).collect(Collectors.toList());
     }
 
     @Transactional
-    public ClassResponse updateStatus(String classId, String newStatus, String changedBy) {
-        Class classEntity = classRepository.findById(UUID.fromString(classId))
+    public ClassResponse updateStatus(UUID classId, ClassStatus status) {
+        Class c = classRepository.findById(classId)
                 .orElseThrow(() -> new ResourceNotFoundException("Class not found"));
-
-        String previousStatus = classEntity.getStatus().name();
-
-        try {
-            classEntity.setStatus(ClassStatus.valueOf(newStatus));
-        } catch (IllegalArgumentException e) {
-            throw new BusinessException("Invalid class status: " + newStatus);
-        }
-
-        classRepository.save(classEntity);
-
-        ClassStatusHistory history = ClassStatusHistory.builder()
-                .classEntity(classEntity)
-                .previousStatus(previousStatus)
-                .newStatus(newStatus)
-                .changedBy(UUID.fromString(changedBy))
-                .build();
-
-        statusHistoryRepository.save(history);
-
-        return toResponse(classEntity);
+        c.setStatus(status);
+        return toResponse(classRepository.save(c));
     }
 
-    private ClassResponse toResponse(Class classEntity) {
-        return new ClassResponse(
-                classEntity.getId().toString(),
-                classEntity.getRoom().getId().toString(),
-                classEntity.getRoom().getVenue().getName(),
-                classEntity.getTeacherId().toString(),
-                classEntity.getTitle(),
-                classEntity.getDiscipline(),
-                classEntity.getCapacity(),
-                classEntity.getPrice(),
-                classEntity.getStartTime(),
-                classEntity.getEndTime(),
-                classEntity.getStatus().name()
-        );
+    private ClassResponse toResponse(Class c) {
+        return new ClassResponse(c.getId(), c.getTitle(),
+                c.getDiscipline() != null ? c.getDiscipline().name() : null,
+                c.getLevel() != null ? c.getLevel().name() : null,
+                c.getDescription(), c.getCapacity(), c.getDuration(), c.getPrice(),
+                c.getMinAge(), c.getMaxAge(), c.getStartTime(),
+                c.getRoom() != null ? c.getRoom().getId() : null,
+                c.getRoom() != null ? c.getRoom().getName() : null,
+                c.getRoom() != null && c.getRoom().getVenue() != null ? c.getRoom().getVenue().getId() : null,
+                c.getRoom() != null && c.getRoom().getVenue() != null ? c.getRoom().getVenue().getName() : null,
+                c.getTeacherId(), c.getStatus() != null ? c.getStatus().name() : null,
+                0, c.getCreatedAt());
     }
 }
